<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

	<item
        android:id="@+id/action_add_bookmark"
        android:icon="@drawable/action_new_bookmark"
        android:orderInCategory="100"
        android:title="@string/add_bookmark"
        app:showAsAction="ifRoom"/>
	<item
        android:id="@+id/action_show_bookmark"
        android:icon="@drawable/action_show_bookmarks"
        android:orderInCategory="100"
        android:title="@string/show_bookmarks"
        app:showAsAction="ifRoom"/>
	<item
        android:id="@+id/action_GPS"
        android:icon="@drawable/current_location"
        android:orderInCategory="100"
        android:title="@string/zoom_curent_location"
        app:showAsAction="always" />

</menu>