<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="vertical" >


        <TextView
            android:text="@string/personType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="5dp" />

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:text="@string/natural"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioNatural"
                android:checked="true"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <RadioButton
                android:text="@string/nonNatural"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioNonNatural"
                android:layout_margin="5dp"
                android:textSize="16sp" />

        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_container"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/color_primary"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/mapOptions"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/mapOptions"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>