<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/firstName"
        android:inputType="textPersonName" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextMiddleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/middleName"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/lastName"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/extraLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/Dob"
            android:textColor="@color/color_primary_dark"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/txtDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />

        <View
            android:id="@+id/lineDob"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/lblRelationshipType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/RelationshipType"
            android:textColor="@color/color_primary_dark"
            android:textSize="@dimen/textSize" />

        <Spinner
            android:id="@+id/spinnerRelationshipType"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/lblgender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/Gender"
            android:textColor="@color/color_primary_dark"
            android:textSize="@dimen/textSize" />

        <Spinner
            android:id="@+id/spinnerGender"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="104dp"
        android:layout_height="39dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/btn_ok"
        android:textColor="@color/black" 
        android:textStyle="bold"
        android:background="@drawable/dialog_button_style"/>

</LinearLayout>