<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <CheckBox
        android:text="@string/enableLabeling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chbxEnableLabeling"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:theme="@style/AppTheme" />
    <CheckBox
        android:text="@string/enableVertexDrawing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chbxEnableVertexDrawing"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:theme="@style/AppTheme" />
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/btn_ok"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/dialog_button_style"/>
</LinearLayout>